# GrainOpt

./: .gitignore  .~lock.Carbon_Footprint_Calculator.xlsx#  Hac.postman_collection.json  aggregate_grid_qd.R  grainopt-geo.qgz  opendata.qgz  rlp-geodata-bak.qgz  rlp-geodata.qgz  rlp-opengeodata.qgz
.ipynb_checkpoints/: metadata_analysis-checkpoint.ipynb
Hackthon_JDOPCenter_Data/Farm1_Jennewein/: fieldboundary_jennewein.gpkg  grid10x10m.gpkg
Hackthon_JDOPCenter_Data/Farm1_Jennewein/shp/: Jennewein-Untere_Hub_2024-11-21_lai.dbf  Jennewein-Untere_Hub_2024-11-21_lai.shp  Jennewein-Untere_Hub_2024-11-21_lai.shx  Klostermuehle_EJ_EJ_0080-0_Un_Application_2021-04-21_00-Deere-Metadata.json  Klostermuehle_EJ_EJ_0080-0_Un_Application_2021-04-21_00.dbf  Klostermuehle_EJ_EJ_0080-0_Un_Application_2021-04-21_00.shp  Klostermuehle_EJ_EJ_0080-0_Un_Application_2021-04-21_00.shx  Klostermuehle_EJ_EJ_0080-0_Un_Application_2021-06-13_00-Deere-Metadata.json  Klostermuehle_EJ_EJ_0080-0_Un_Application_2021-06-13_00.shp  Klostermuehle_EJ_EJ_0080-0_Un_Application_2021-06-13_00.shx  Klostermuehle_EJ_EJ_0080-0_Un_Application_2021-08-27_00-Deere-Metadata.json  Klostermuehle_EJ_EJ_0080-0_Un_Application_2021-08-27_00.dbf  Klostermuehle_EJ_EJ_0080-0_Un_Application_2021-08-27_00.shp  Klostermuehle_EJ_EJ_0080-0_Un_Application_2021-08-27_00.shx  (+133 more)
analysis/: metadata_analysis.ipynb  metadata_report.html  pyproject.toml  tank_co2_export.csv
analysis/.ipynb_checkpoints/: metadata_analysis-checkpoint.ipynb  metadata_report-checkpoint.html
models/: buffered_stats.model3
styles/: yield.qml
(+27 files in other folders)
