[tool.poetry]
name = "grainopt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
jupyterlab = "^4.3.1"
pandas = "^2.2.3"
ydata-profiling = "^4.12.0"
ipywidgets = "^8.1.5"
beautifulsoup4 = "^4.12.3"
selenium = "^4.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
